# cross-python

./: Jenkinsfile  LICENSE.md  README.md  README.rst  SConstruct  bitbucket-pipelines.yml  meson.build  meson_options.txt  requirements.txt  test_win64.bat  version.sh
Modules/_socket/: ip_protocols.c
cross-files/: i686-w64-mingw32.txt  x86_64-w64-mingw32.txt
site_scons/site_tools/: URLDownload.py  Unpack.py  ZipDir.py
utils/: README.rst  pyconfig_compare.py  windows_headers.py
